--- a/galaxy.yml
+++ b/galaxy.yml
@@ -8,7 +8,7 @@ namespace: respiro
 name: illumio
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 1.0.8
+version: 1.1.0
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -17,7 +17,7 @@ readme: README.md
 # @nicks:irc/im.site#channel'
 authors:
 - Safal Khanal <skhanal@respiro.com.au>
-
+- Nghia Huu (David) Nguyen <dnguyen@respiro.com.au>
 
 ### OPTIONAL but strongly recommended
 # A short summary description of the collection
