--- a/galaxy.yml
+++ b/galaxy.yml
@@ -49,5 +49,7 @@ repository: https://github.com/RespiroConsulting/illumio_collection
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
 # uses 'fnmatch' to match the files or directories. Some directories and files like 'galaxy.yml', '*.pyc', '*.retry',
 # and '.git' are always filtered
-build_ignore: []
+build_ignore: [
+.gitignore
+]
 
